--- a/src/style.css
+++ b/src/style.css
@@ -10,3 +10,35 @@ body {
   font-family: "Arial", sans-serif;
   background: linear-gradient(0deg, #61008aff 0%, #1a0079ff 0%);
 }
+
+@keyframes buttonAnimateHeavy {
+  0% {
+    transform: scale(1);
+  }
+  30% {
+    transform: scale(0.75);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.buttonanimate-heavy {
+  animation: buttonAnimateHeavy 0.1s;
+}
+
+@keyframes buttonAnimateLight {
+  0% {
+    transform: scale(1);
+  }
+  30% {
+    transform: scale(0.9);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.buttonanimate-light {
+  animation: buttonAnimateLight 0.1s;
+}
